Refactor collections. Refactor graph search algorithms.